--- a/jquery/jqm-demos.css
+++ b/jquery/jqm-demos.css
@@ -48,8 +48,8 @@
 
 /* Footer */
 .jqm-demos .jqm-footer.ui-footer {
-	position: absolute;
-	bottom: 0;
+	/* position: absolute; */
+	/* bottom: 0; */
 	padding-bottom: 0;
 }
 .jqm-demos .jqm-footer {
