--- a/css/main.css
+++ b/css/main.css
@@ -194,11 +194,11 @@ background-color:#FFFFFF;
 }
 @font-face {
     font-family: 'robotoregular';
-    src: url('/res/fonts/roboto/Roboto-Regular-webfont.eot');
-    src: url('/res/fonts/roboto/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/res/fonts/roboto/Roboto-Regular-webfont.woff') format('woff'),
-         url('/res/fonts/roboto/Roboto-Regular-webfont.ttf') format('truetype'),
-         url('/res/fonts/roboto/Roboto-Regular-webfont.svg#robotoregular') format('svg');
+    src: url('../res/fonts/roboto/Roboto-Regular-webfont.eot');
+    src: url('../res/fonts/roboto/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../res/fonts/roboto/Roboto-Regular-webfont.woff') format('woff'),
+         url('../res/fonts/roboto/Roboto-Regular-webfont.ttf') format('truetype'),
+         url('../res/fonts/roboto/Roboto-Regular-webfont.svg#robotoregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -208,13 +208,13 @@ background-color:#FFFFFF;
   
   font-style: normal;
   font-weight: 400;
-  src: local('Ubuntu'), url(/res/fonts/ubuntu.woff) format('woff');
+  src: local('Ubuntu'), url(../res/fonts/ubuntu.woff) format('woff');
 }
 @font-face {
   
   font-style: normal;
   font-weight: 500;
-  src: local('Ubuntu Medium'), local('Ubuntu-Medium'), url(/res/fonts/ubuntu_medium.woff) format('woff');
+  src: local('Ubuntu Medium'), local('Ubuntu-Medium'), url(../res/fonts/ubuntu_medium.woff) format('woff');
 }
 h1,h2,h3{
 	
@@ -812,7 +812,7 @@ top: 3px;
 .leftsideh1 a{
 	color: #FFFFFF !important;
 }
-.btn_tabs .ui-btn {
+.btn_tabs .ui-btn { 
 float: left;
 width: 50%;
 margin: 0px
@@ -855,4 +855,8 @@ font-size: 1rem;
 	display:none;
 	margin-top:10px;
 	cursor:pointer;
+}
+#product-card-content {
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 }
