--- a/css/main.css
+++ b/css/main.css
@@ -660,7 +660,7 @@ background-color: rgb(224, 214, 214);
 .product-card-module:hover {
 background-color: rgba(218, 235, 245, 0.33);
 }
-#page-cart .ui-icon-carat-r:after{
+#page-cart .ui-icon-carat-r:after,#shoplist-page .ui-icon-carat-r:after{
 	display: none;
 }
 #total_price {
