--- a/css/main.css
+++ b/css/main.css
@@ -194,11 +194,11 @@ background-color:#FFFFFF;
 }
 @font-face {
     font-family: 'robotoregular';
-    src: url('../res/fonts/roboto/Roboto-Regular-webfont.eot');
-    src: url('../res/fonts/roboto/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../res/fonts/roboto/Roboto-Regular-webfont.woff') format('woff'),
-         url('../res/fonts/roboto/Roboto-Regular-webfont.ttf') format('truetype'),
-         url('../res/fonts/roboto/Roboto-Regular-webfont.svg#robotoregular') format('svg');
+    src: url('../fonts/roboto/Roboto-Regular-webfont.eot');
+    src: url('../fonts/roboto/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto/Roboto-Regular-webfont.woff') format('woff'),
+         url('../fonts/roboto/Roboto-Regular-webfont.ttf') format('truetype'),
+         url('../fonts/roboto/Roboto-Regular-webfont.svg#robotoregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -208,13 +208,13 @@ background-color:#FFFFFF;
   
   font-style: normal;
   font-weight: 400;
-  src: local('Ubuntu'), url(../res/fonts/ubuntu.woff) format('woff');
+  src: local('Ubuntu'), url(../fonts/ubuntu.woff) format('woff');
 }
 @font-face {
   
   font-style: normal;
   font-weight: 500;
-  src: local('Ubuntu Medium'), local('Ubuntu-Medium'), url(../res/fonts/ubuntu_medium.woff) format('woff');
+  src: local('Ubuntu Medium'), local('Ubuntu-Medium'), url(../fonts/ubuntu_medium.woff) format('woff');
 }
 h1,h2,h3{
 	
