--- a/css/icons-svg.css
+++ b/css/icons-svg.css
@@ -30,6 +30,11 @@ float: left;
 .c_menu {
 background-image: url(../img/svg/white/ico-32.svg);
 }
+.c_back {
+    background-image: url(/img/svg/white/ico-02_back.svg);
+    position: relative;
+    top: 2px;
+}
 .c_user {
 background-image: url(../img/svg/white/ico-18.svg);
 width: 20px;
