Добавлены стили ко кнопке назад

--- a/css/icons-svg.css
+++ b/css/icons-svg.css
@@ -31,7 +31,7 @@ float: left;
 background-image: url(../img/svg/white/ico-32.svg);
 }
 .c_back {
-    background-image: url(/img/svg/white/ico-02_back.svg);
+    background-image: url(../img/svg/white/ico-02_back.svg);
     position: relative;
     top: 2px;
 }
