--- a/css/icons-svg.css
+++ b/css/icons-svg.css
@@ -183,6 +183,8 @@ background-repeat: no-repeat;
 width:108px;
 height: 20px;
 display: inline-block;
+    position: relative;
+    top: 3px;
 }
 
 .product-card-module:after, .ui-icon-carat-r:after{
