--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,8 @@ top: 1px;*/
  h2 {
 margin-top: 0.9rem;
 margin-bottom: 0.9rem;
-font-size:1.4rem;
+font-size:1rem;
+font-weight: 600 !important;
 }
 .product-card-code-cr {
 margin-bottom: 1rem;
@@ -278,7 +279,7 @@ background-color: #FFFFFF;
 }
 .owl-carousel-product-card .item{
 	max-height: 600px;
-height: 300px;
+height: 200px;
 display: table;
 width: 100%;
 }
@@ -290,7 +291,7 @@ text-align: center;
 vertical-align: middle;
 }
 .owl-carousel-product-card .owl-item{
-	height: 300px
+	height: 200px
 }
 .owl-carousel-product-card  .owl-item img{
 	width: auto !important;
@@ -299,7 +300,7 @@ vertical-align: middle;
 	max-width: 100%;
 }
 #product-card-images {
-	height: 300px;
+	height: 200px;
 }
 #main .ui-content, #search-page .ui-content{
 	padding-top: 0;
@@ -473,7 +474,7 @@ margin-top: 2.5rem;
 
 }
 .variation_list_contaner {
-margin-bottom: 16px;
+margin-bottom: -6px;
 }
 .variation_type_name {
 
@@ -491,11 +492,11 @@ overflow: hidden;
 float: left;
 position: relative;
 top: 0.6rem;
-font-size: 1.2rem;
+font-size: 1rem;
 }
 .prices_item_value {
 float: right;
-font-size: 2rem;
+font-size: 1.6rem;
 color: #F47317 !important;
 }
 .pre_sup {
@@ -508,7 +509,7 @@ top: 2px;
 float: left;
 }
 .owl-controls {
-margin-top: 10px;
+margin-top: 0px;
 text-align: center;
 -webkit-tap-highlight-color: transparent;
 }
@@ -908,4 +909,8 @@ border-bottom: 1px solid #C8C7CC;
 }
 .BackButton:hover span {
     color: rgb(231, 231, 231);
+}
+
+.owl-carousel-product-card .item img {
+    max-height: 200px;
 }
